Implement a different list view for rating history, and adjust MovieListFragment accordingly.